--- a/app/views/bought_pokemons/index.html.erb
+++ b/app/views/bought_pokemons/index.html.erb
@@ -8,9 +8,9 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'index' %>
   </head>
 
   <body>
-    <%= yield %>
   </body>
 </html>
